src/test/resources/valid_programs/decl_stm_simple.notc
void main() {
    int i, j, k, l;
    double d, e, f, g;
    bool a, b, c;
    string s, t, u ,v;
}
