src/test/resources/semantic_errors/funcall_incorrect_type2.notc
void fun(bool a, string b) {
}

void main() {
    fun(true, 54);
}
